--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ html {
 
   /* ------ */
 
-  font-size: 16px;
+  font-size: 28px;
   font-family : '游ゴシック';
   color: var(--font-color);
 
@@ -54,8 +54,6 @@ nav {
   display: flex;
   width: 300px;
   height: 100%;
-
-  font-size: 28px;
   
   background: var(--nav-color);
 
@@ -65,24 +63,48 @@ nav {
 
 nav:hover {  left: 0px; }
 
+@media ( orientation: portrait ) { nav { 
+
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  left: 0px;
+  width: 100%;
+  height: auto;
+
+}}
+
 #nav-menu {
 
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 250px;
+  height: 100%;
+  overflow-y: auto;
 
 }
+
+@media ( orientation: portrait ) { #nav-menu {
+
+  display: none;
+  width: 100%;
+  overflow-y: auto;
+  height: auto;
+  /*padding: 50px 0;*/
+
+}}
 
 #nav-menu > * {
 
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 8%;
   width: 100%;
   
 }
+
+#nav-menu > a:hover { background: var(--nav-menu-a-hover-color); }
+#nav-menu > a:active { background: var(--nav-menu-a-active-color); }
 
 #nav-title {
 
@@ -90,9 +112,6 @@ nav:hover {  left: 0px; }
   font-weight: bold;
 
 }
-
-#nav-menu > a:hover { background: var(--nav-menu-a-hover-color); }
-#nav-menu > a:active { background: var(--nav-menu-a-active-color); }
 
 #search {
 
@@ -128,6 +147,18 @@ nav:hover {  left: 0px; }
 
 }
 
+@media ( orientation: portrait ) {
+
+  #nav-button { 
+
+    width: 100%;
+    height: 45px;
+    writing-mode: horizontal-tb;
+  
+  }
+
+}
+
 main {
 
   position: absolute;
@@ -140,13 +171,17 @@ main {
 
 }
 
+@media ( orientation: portrait ) { main { flex-direction: column; } }
+
 #filler{
 
   width: 50px;
 
-  background: black;
+  background: var(--green);
 
 }
+
+@media ( orientation: portrait ) { #filler { width: 100%; height: 50px; } }
 
 #inner-page {
 
@@ -155,3 +190,5 @@ main {
   border: 0;
 
 }
+
+@media ( orientation: portrait ) { #inner-page { height: 100%; } }
