Added custom selection style and folder for particles.

--- a/pages/template.css
+++ b/pages/template.css
@@ -94,6 +94,15 @@ body {
 
 }
 
+div::selection,
+b::selection,
+span::selection {
+
+  color: inherit;
+  background: var(--pink);
+
+}
+
 body > * {
 
   padding: 3vw 0;
